change-image| fix

--- a/Multidisciplinary/language/Multidisciplinary-telugu.htm
+++ b/Multidisciplinary/language/Multidisciplinary-telugu.htm
@@ -407,7 +407,7 @@ style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif'><d
       style=""
       data-index="12"
     />
-  </figure>
+  </figure></div>
 </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0cm;margin-bottom:
