--- a/Multidisciplinary/language/Multidisciplinary-Gujarati.htm
+++ b/Multidisciplinary/language/Multidisciplinary-Gujarati.htm
@@ -1486,7 +1486,7 @@ EN-IN;mso-bidi-language:HI;mso-no-proof:yes'><!--[if gte vml 1]><v:shapetype
       style=""
       data-index="12"
     />
-  </figure>
+  </figure></div>
 <![endif]></span><span
 lang=EN-US style='font-size:12.0pt;line-height:150%;font-family:"Times New Roman",serif;
 mso-fareast-font-family:"Times New Roman"'><o:p></o:p></span></p>
