--- a/CHEMICAL ENGINEERING/language/chemical engineering - gujarati.htm
+++ b/CHEMICAL ENGINEERING/language/chemical engineering - gujarati.htm
@@ -89,7 +89,7 @@ color:black'><div class="se-component se-image-container __se__float-center"
       style=""
       data-index="10"
     />
-  </figure>
+  </figure></div>
 </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0cm;margin-bottom:
