--- a/CHEMICAL ENGINEERING/language/chemical engineering -telugu.htm
+++ b/CHEMICAL ENGINEERING/language/chemical engineering -telugu.htm
@@ -100,7 +100,7 @@ color:black'><div class="se-component se-image-container __se__float-center"
       style=""
       data-index="10"
     />
-  </figure>
+  </figure></div>
 </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0cm;margin-bottom:
@@ -490,6 +490,7 @@ lang=EN-US style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-s
       data-index="10"
     />
   </figure>
+  </div>
 </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0cm;margin-bottom:
