--- a/CHEMICAL ENGINEERING/language/chemical engineering tamil.htm
+++ b/CHEMICAL ENGINEERING/language/chemical engineering tamil.htm
@@ -91,7 +91,7 @@ color:black'> <div class="se-component se-image-container __se__float-center"
       style=""
       data-index="10"
     />
-  </figure>
+  </figure></div>
 </div>
 
 </span></p>
