--- a/ELECTRICAL ENGINEERING/language/electrical engineering-tamil.htm
+++ b/ELECTRICAL ENGINEERING/language/electrical engineering-tamil.htm
@@ -49,13 +49,7 @@ style='font-size:14.5pt'>&nbsp;</span></b></p>
 
 <p class=MsoBodyText style='margin-top:.3pt'>
 
-<table cellpadding=0 cellspacing=0 align=left>
- <tr>
-  <td width=264 height=0></td>
- </tr>
- <tr>
-  <td></td>
-  <td><div
+<div
   class="se-component se-image-container __se__float-center"
   contenteditable="false"
 >
@@ -79,9 +73,7 @@ style='font-size:14.5pt'>&nbsp;</span></b></p>
     />
   </figure>
 </div>
-</td>
- </tr>
-</table>
+
 
 <br clear=ALL>
 </p>
@@ -251,13 +243,7 @@ clear=all style='page-break-before:always'>
 
 <p class=MsoBodyText style='margin-top:.25pt'>
 
-<table cellpadding=0 cellspacing=0 align=left>
- <tr>
-  <td width=264 height=0></td>
- </tr>
- <tr>
-  <td></td>
-  <td><div
+<div
   class="se-component se-image-container __se__float-center"
   contenteditable="false"
 >
@@ -281,9 +267,7 @@ clear=all style='page-break-before:always'>
     />
   </figure>
 </div>
-</td>
- </tr>
-</table>
+
 
 <br clear=ALL>
 </p>
