--- a/ELECTRICAL ENGINEERING/language/electrical engineering kannada.htm
+++ b/ELECTRICAL ENGINEERING/language/electrical engineering kannada.htm
@@ -53,13 +53,7 @@ style='font-size:14.5pt'>&nbsp;</span></b></p>
 
 <p class=MsoBodyText style='margin-top:.3pt'>
 
-<table cellpadding=0 cellspacing=0 align=left>
- <tr>
-  <td width=264 height=0></td>
- </tr>
- <tr>
-  <td></td>
-  <td><div
+<div
   class="se-component se-image-container __se__float-center"
   contenteditable="false"
 >
@@ -84,9 +78,7 @@ style='font-size:14.5pt'>&nbsp;</span></b></p>
   </figure>
 </div>
 
-</td>
- </tr>
-</table>
+
 
 <br clear=ALL>
 </p>
@@ -239,13 +231,7 @@ clear=all style='page-break-before:always'>
 
 <p class=MsoBodyText style='margin-top:.25pt'>
 
-<table cellpadding=0 cellspacing=0 align=left>
- <tr>
-  <td width=264 height=0></td>
- </tr>
- <tr>
-  <td></td>
-  <td><div
+<div
   class="se-component se-image-container __se__float-center"
   contenteditable="false"
 >
@@ -269,9 +255,7 @@ clear=all style='page-break-before:always'>
     />
   </figure>
 </div>
-</td>
- </tr>
-</table>
+
 
 <br clear=ALL>
 </p>
