--- a/ELECTRICAL ENGINEERING/language/electrical engineering-hindi.htm
+++ b/ELECTRICAL ENGINEERING/language/electrical engineering-hindi.htm
@@ -51,13 +51,7 @@ style='font-size:14.5pt'>&nbsp;</span></b></p>
 
 <p class=MsoBodyText style='margin-top:.3pt'>
 
-<table cellpadding=0 cellspacing=0 align=left>
- <tr>
-  <td width=264 height=0></td>
- </tr>
- <tr>
-  <td></td>
-  <td><div
+<div
   class="se-component se-image-container __se__float-center"
   contenteditable="false"
 >
@@ -83,9 +77,7 @@ style='font-size:14.5pt'>&nbsp;</span></b></p>
 </div>
 
 
-</td>
- </tr>
-</table>
+
 
 <br clear=ALL>
 </p>
@@ -234,13 +226,7 @@ clear=all style='page-break-before:always'>
 
 <p class=MsoBodyText style='margin-top:.25pt'>
 
-<table cellpadding=0 cellspacing=0 align=left>
- <tr>
-  <td width=264 height=0></td>
- </tr>
- <tr>
-  <td></td>
-  <td><div
+<div
   class="se-component se-image-container __se__float-center"
   contenteditable="false"
 >
@@ -264,9 +250,7 @@ clear=all style='page-break-before:always'>
     />
   </figure>
 </div>
-</td>
- </tr>
-</table>
+
 
 <br clear=ALL>
 </p>
