--- a/ELECTRICAL ENGINEERING/language/electrical engineering kannada.htm
+++ b/ELECTRICAL ENGINEERING/language/electrical engineering kannada.htm
@@ -224,6 +224,7 @@ clear=all style='page-break-before:always'>
 &#3226;&#3263;&#3236;&#3277;&#3248;&#3253;&#3240;&#3277;&#3240;&#3265;
 &#3240;&#3264;&#3253;&#3265;
 &#3240;&#3275;&#3233;&#3265;&#3236;&#3277;&#3236;&#3264;&#3248;&#3263;.</span></p>
+</div>
 
 <p class=MsoBodyText style='margin-top:8.1pt;margin-right:0cm;margin-bottom:
 0cm;margin-left:5.0pt;margin-bottom:.0001pt;text-align:justify'><span lang=kn>(&#3256;&#3277;&#3250;&#3272;&#3233;&#3277;
