--- a/ELECTRICAL ENGINEERING/language/electrical engineering malayalam.htm
+++ b/ELECTRICAL ENGINEERING/language/electrical engineering malayalam.htm
@@ -232,6 +232,7 @@ clear=all style='page-break-before:always'>
 &#3335;&#3364;&#3405;&#3364;&#3376;&#3364;&#3405;&#3364;&#3391;&#3378;&#3393;&#3379;&#3405;&#3379;
 &#3346;&#3376;&#3393; &#3376;&#3394;&#3370;&#3330; &#3368;&#3391;&#3353;&#3405;&#3353;&#3454;&#3349;&#3405;&#3349;&#3405;
 &#3349;&#3390;&#3363;&#3390;&#3368;&#3390;&#3349;&#3393;&#3330;.</span></p>
+</div>
 
 <p class=MsoBodyText style='margin-top:8.1pt;margin-right:0cm;margin-bottom:
 0cm;margin-left:5.0pt;margin-bottom:.0001pt;text-align:justify'><span lang=ml>(&#3384;&#3405;&#3378;&#3400;&#3361;&#3405;
