--- a/ELECTRICAL ENGINEERING/language/electrical engineering- bengali.htm
+++ b/ELECTRICAL ENGINEERING/language/electrical engineering- bengali.htm
@@ -230,6 +230,7 @@ clear=all style='page-break-before:always'>
 &#2474;&#2509;&#2480;&#2468;&#2495;&#2472;&#2495;&#2471;&#2495;&#2468;&#2509;&#2476;
 &#2453;&#2480;&#2468;&#2503; &#2470;&#2503;&#2454;&#2468;&#2503;
 &#2474;&#2494;&#2476;&#2503;&#2472;&#2404;</span></p>
+</div>
 
 <p class=MsoBodyText style='margin-top:8.1pt;margin-right:0cm;margin-bottom:
 0cm;margin-left:5.0pt;margin-bottom:.0001pt;text-align:justify'><span lang=bn>(&#2480;&#2503;&#2475;&#2494;&#2480;&#2503;&#2472;&#2509;&#2488;
