--- a/ELECTRICAL ENGINEERING/language/electrical engineering- gujarati.htm
+++ b/ELECTRICAL ENGINEERING/language/electrical engineering- gujarati.htm
@@ -223,6 +223,7 @@ clear=all style='page-break-before:always'>
 &#2734;&#2750;&#2719;&#2759; &#2736;&#2716;&#2754;
 &#2709;&#2736;&#2759;&#2738;&#2752; &#2694;&#2709;&#2755;&#2724;&#2751;
 &#2716;&#2763;&#2742;&#2763;.</span></p>
+</div>
 
 <p class=MsoBodyText style='margin-top:8.1pt;margin-right:0cm;margin-bottom:
 0cm;margin-left:5.0pt;margin-bottom:.0001pt;text-align:justify'><span lang=gu>(&#2744;&#2765;&#2738;&#2750;&#2695;&#2721;
