--- a/ELECTRICAL ENGINEERING/language/electrical engineering-marathi.htm
+++ b/ELECTRICAL ENGINEERING/language/electrical engineering-marathi.htm
@@ -239,6 +239,7 @@ clear=all style='page-break-before:always'>
 &#2310;&#2325;&#2371;&#2340;&#2368; &#2357;&#2367;&#2352;&#2379;&#2343;&#2366;&#2360;&#2366;&#2336;&#2368;
 &#2346;&#2381;&#2352;&#2340;&#2367;&#2344;&#2367;&#2343;&#2367;&#2340;&#2381;&#2357;
 &#2325;&#2375;&#2354;&#2375;&#2354;&#2368; &#2342;&#2367;&#2360;&#2375;&#2354;.</span></p>
+</div>
 
 <p class=MsoBodyText style='margin-top:8.1pt;margin-right:0cm;margin-bottom:
 0cm;margin-left:5.0pt;margin-bottom:.0001pt;text-align:justify'><span lang=mr>(&#2346;&#2366;&#2361;&#2366;
