--- a/ELECTRICAL ENGINEERING/language/electrical engineering-tamil.htm
+++ b/ELECTRICAL ENGINEERING/language/electrical engineering-tamil.htm
@@ -236,6 +236,7 @@ clear=all style='page-break-before:always'>
 &#2953;&#2992;&#3009;&#2997;&#2980;&#3021;&#2980;&#3016;
 &#2984;&#3008;&#2969;&#3021;&#2965;&#2995;&#3021;
 &#2986;&#3006;&#2992;&#3021;&#2986;&#3021;&#2986;&#3008;&#2992;&#3021;&#2965;&#2995;&#3021;.</span></p>
+</div>
 
 <p class=MsoBodyText style='margin-top:8.1pt;margin-right:0cm;margin-bottom:
 0cm;margin-left:5.0pt;margin-bottom:.0001pt;text-align:justify'><span lang=ta>(
