--- a/ELECTRICAL ENGINEERING/language/electrical engineering-telugu.htm
+++ b/ELECTRICAL ENGINEERING/language/electrical engineering-telugu.htm
@@ -227,6 +227,7 @@ clear=all style='page-break-before:always'>
 &#3120;&#3093;&#3118;&#3144;&#3112;
 &#3114;&#3103;&#3134;&#3112;&#3149;&#3112;&#3135; &#3118;&#3136;&#3120;&#3137;
 &#3098;&#3138;&#3105;&#3125;&#3098;&#3149;&#3098;&#3137;.</span></p>
+</div>
 
 <p class=MsoBodyText style='margin-top:8.1pt;margin-right:0cm;margin-bottom:
 0cm;margin-left:5.0pt;margin-bottom:.0001pt;text-align:justify'><span lang=te>(&#3128;&#3149;&#3122;&#3144;&#3105;&#3149;
