--- a/ELECTRICAL ENGINEERING/language/electrical engineering-hindi.htm
+++ b/ELECTRICAL ENGINEERING/language/electrical engineering-hindi.htm
@@ -219,12 +219,11 @@ clear=all style='page-break-before:always'>
 &#2346;&#2381;&#2352;&#2340;&#2367;&#2344;&#2367;&#2343;&#2367;&#2340;&#2381;&#2357;
 &#2311;&#2360; &#2340;&#2352;&#2361; &#2325;&#2366; &#2310;&#2306;&#2325;&#2337;&#2364;&#2366;
 &#2342;&#2375;&#2326;&#2375;&#2306;&#2327;&#2375;&#2404;</span></p>
-
+</div>
 <p class=MsoBodyText style='margin-top:8.1pt;margin-right:0cm;margin-bottom:
 0cm;margin-left:5.0pt;margin-bottom:.0001pt;text-align:justify'><span lang=hi>(&#2360;&#2381;&#2354;&#2366;&#2311;&#2337;
 &#2360;&#2350;&#2351; &#2342;&#2375;&#2326;&#2375;&#2306;: 02:38)</span></p>
 
-<p class=MsoBodyText style='margin-top:.25pt'>
 
 <div
   class="se-component se-image-container __se__float-center"
@@ -250,10 +249,6 @@ clear=all style='page-break-before:always'>
     />
   </figure>
 </div>
-
-
-<br clear=ALL>
-</p>
 
 <p class=MsoBodyText style='margin-top:6.55pt;margin-right:5.8pt;margin-bottom:
 0cm;margin-left:5.0pt;margin-bottom:.0001pt;text-align:justify;line-height:
