--- a/BASIC SCIENCE/language/Bacis science-telugu.htm
+++ b/BASIC SCIENCE/language/Bacis science-telugu.htm
@@ -301,6 +301,8 @@ lang=EN-US style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-s
       data-index="9"
     />
   </figure>
+  </div>
+  
 </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0cm;margin-bottom:
