--- a/BASIC SCIENCE/language/Bacis science-bengali.htm
+++ b/BASIC SCIENCE/language/Bacis science-bengali.htm
@@ -287,11 +287,8 @@ style='font-size:12.0pt;line-height:150%;font-family:"Vrinda",sans-serif'>,</spa
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0cm;margin-bottom:
 12.0pt;margin-left:0cm;text-align:justify;line-height:150%'><span
-lang=EN-US style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'><div
-  class="se-component se-image-container __se__float-center"
-  contenteditable="false"
->
-  <figure style="margin: auto;">
+lang=EN-US style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'>
+
     <div
   class="se-component se-image-container __se__float-center"
   contenteditable="false"
