--- a/BASIC SCIENCE/language/Bacis science-marathi.htm
+++ b/BASIC SCIENCE/language/Bacis science-marathi.htm
@@ -289,7 +289,8 @@ style='font-family:"Vrinda",sans-serif'>,</span><span lang=mr style='font-size:
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0cm;margin-bottom:
 12.0pt;margin-left:0cm;text-align:justify;line-height:150%'><span
-lang=EN-US style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'><div
+lang=EN-US style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-serif'>
+<div
   class="se-component se-image-container __se__float-center"
   contenteditable="false"
 >
@@ -312,6 +313,7 @@ lang=EN-US style='font-size:11.0pt;line-height:115%;font-family:"Calibri",sans-s
       data-index="9"
     />
   </figure>
+  </div>
 </span></p>
 
 <p class=MsoNormal style='margin-top:12.0pt;margin-right:0cm;margin-bottom:
